[Progressing] I've just had physical therapy about rails today

--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>YouKnow</title>
+    <title><%= yield(:title) %> | youKnow </title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
