[Finish] modify-layout

--- a/src/app/views/static_pages/home.html.erb
+++ b/src/app/views/static_pages/home.html.erb
@@ -1,4 +1,7 @@
-<h1>youKnow</h1>
-<p>
-    This is the home page for youKnow : my portfolio.
-</p>
+<div>
+    <h1>Welcome to youKnow</h1>
+    <p>
+        This is the home page for youKnow : My portfolio.
+    </p>
+    <%= link_to "Sign up now!", "#", class: "btn btn-lg btn-primary" %>
+</div>
