--- a/src/app/views/static_pages/home.html.erb
+++ b/src/app/views/static_pages/home.html.erb
@@ -3,5 +3,5 @@
     <p>
         This is the home page for youKnow : My portfolio.
     </p>
-    <%= link_to "Sign up now!", "#", class: "btn btn-lg btn-primary" %>
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
