--- a/src/app/views/layouts/_footer.html.erb
+++ b/src/app/views/layouts/_footer.html.erb
@@ -1,13 +1,28 @@
 <footer>
-	<small>
-		<%= link_to "youKnow", "#" %>
-	</small>
-	<nav>
-		<ul>
-			<li><%= link_to "About", about_path %></li>
-			<li><%= link_to "Home", root_path %></li>
-			<li><%= link_to "Contact", contact_path %></li>
-			<li><%= link_to "Github", 'https://github.com/otegami/youKnow' %></li>
-		</ul>
+	<nav class="navbar fixed-bottom navbar-expand-lg navbar-light bg-light">
+		<div class="container">
+			<div class="row">
+				<%= link_to "youKnow", '#', id: "logo", class: "navbar-brand" %>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+					<div class="navbar-nav">
+						<li class = "nav-item nav-link active" >
+							<%= link_to "Home", root_path %>
+						</li>
+						<li class = "nav-item nav-link active" >
+							<%= link_to "About", about_path %>
+						</li>
+						<li class = "nav-item nav-link" >
+							<%= link_to "Contact", contact_path %>
+						</li>
+						<li class = "nav-item nav-link disabled" >
+							<%= link_to "Github", 'https://github.com/otegami/youKnow' %>
+						</li>
+					</div>
+				</div>
+			</div>
+		</div>
 	</nav>
 </footer>
