--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -6,8 +6,12 @@
   </head>  
   <body>
     <%= render 'layouts/header' %>
-    <div class = "container">
-      <%= yield %>
+    <div class="container mx-auto">
+      <div class="row">
+        <div class="col-8 offset-2">
+          <%= yield %>
+        </div>
+      </div>  
     </div>
     <%= render 'layouts/footer' %>
   </body>
