--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -8,11 +8,16 @@
     <%= render 'layouts/header' %>
     <div class="container mx-auto">
       <div class="row">
-        <div class="col-8 offset-2">
+        <div class="col-8 offset-2 text-center">
           <%= yield %>
         </div>
       </div>  
     </div>
     <%= render 'layouts/footer' %>
+    <div class="container mx-auto">
+      <div class="row">
+        <%= debug(params) if Rails.env.development? %>
+      </div>
+    </div>  
   </body>
 </html>
