--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
     <div class="container mx-auto">
       <div class="row">
         <div class="col-8 offset-2 text-center">
+          <% flash.each do |message_type, message| %>
+            <div class="alert alert-<%= message_type %>">
+              <%= message %>
+            </div>
+          <% end %>
           <%= yield %>
         </div>
       </div>  
