--- a/src/app/views/layouts/_header.html.erb
+++ b/src/app/views/layouts/_header.html.erb
@@ -8,9 +8,30 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 						<div class="navbar-nav">
-							<li class = "nav-item nav-link active" ><%= link_to "Home", root_path %></li>
-							<li class = "nav-item nav-link" ><%= link_to "Help", help_path %></li>
-							<li class = "nav-item nav-link disabled" ><%= link_to "Log in", "#" %></li>
+							<li class = "nav-item nav-link active" >
+								<%= link_to "Home", root_path %>
+							</li>
+							<li class = "nav-item nav-link" >
+								<%= link_to "Help", help_path %>
+							</li>
+							<% if logged_in? %>
+								<li class = "nav-item nav-link">
+									<%= link_to "Users", '#' %>
+								</li>
+								<li class = "nav-item nav-link">
+									<%= link_to "Profile", current_user %>
+								</li>
+								<li class = "nav-item nav-link">
+									<%= link_to "Setting", '#' %>
+								</li>
+								<li class = "nav-item nav-link">
+									<%= link_to "Log out", logout_path, method: :delete %>
+								</li>
+							<% else %>
+								<li class = "nav-item nav-link " >
+									<%= link_to "Log in", login_path %>
+								</li>
+							<% end %>
 						</div>
 					</div>
 				</div>
