--- a/src/app/views/users/new.html.erb
+++ b/src/app/views/users/new.html.erb
@@ -1,36 +1,11 @@
 <% provide(:title, 'Sign up') %>
+<% provide(:button_text, 'Create my account') %>
 <h1>Sign up</h1>
 
 <div class="container">
   <div class="row">
     <div class="col-10 col-offset-1 text-left">
-      <%= form_with model: @user, local: true do |f| %>
-        <%= render 'shared/error_messages' %>
-
-        <div class="form-group">
-          <%= f.label :name, class: 'control-label' %>
-          <%= f.text_field :name, class: 'form-control' %>
-        </div>  
-
-        <div class="form-group">
-          <%= f.label :email, class: 'control-label' %>
-          <%= f.email_field :email, class: 'form-control' %>
-        </div>  
-
-        <div class="form-group">  
-          <%= f.label :password, class: 'control-label' %>
-          <%= f.password_field :password, class: 'form-control' %>
-        </div>
-
-        <div class="form-group">  
-          <%= f.label :password_confirmation, "Confirmation", class: 'control-label' %>
-          <%= f.password_field :password_confirmation, class: 'form-control' %>
-        </div>
-        
-        <div class="form-group">
-          <%= f.submit "Create my account", class: "btn btn-primary" %>
-        </div>  
-      <% end %> 
+      <%= render 'shared/form' %>
     </div>
   </div>
 </div>
