--- a/src/app/views/layouts/_header.html.erb
+++ b/src/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
 							</li>
 							<% if logged_in? %>
 								<li class = "nav-item nav-link">
-									<%= link_to "Users", '#' %>
+									<%= link_to "Users", users_path %>
 								</li>
 								<li class = "nav-item nav-link">
 									<%= link_to "Profile", current_user %>
