--- a/src/app/views/user_mailer/account_activation.text.erb
+++ b/src/app/views/user_mailer/account_activation.text.erb
@@ -2,9 +2,4 @@ Hi <%= @user.name %>
 
 Welcome to youKnow! Click on the link below to activate your account:
 
-<%= 
-  edit_account_acctivation_url(
-    @user.acctivation_token, 
-    email: @user.email
-  ) 
-%>
+<%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
