[Fix] Action mailer templates about user activation

--- a/src/app/views/user_mailer/account_activation.html.erb
+++ b/src/app/views/user_mailer/account_activation.html.erb
@@ -8,5 +8,8 @@ Welcome to youKnow! Click on the link below to activate your account:
 
 <%= link_to "Activate", edit_account_activation_url(
   @user.activation_token,
-  emial: @user.email
+  email: @user.email
 )%>
+
+https://whoknows-youknow.herokuapp.com/account_activations/gqdX5XonvY-lyNRCVVBdTQ/edit?email=s-takuya1026%40z7.keio.jp
+https://whoknows-youknow.herokuapp.com/account_activations/gqdX5XonvY-lyNRCVVBdTQ/edit?emial=s-takuya1026%40z7.keio.jp
