--- a/src/app/views/password_resets/edit.html.erb
+++ b/src/app/views/password_resets/edit.html.erb
@@ -1,2 +1,27 @@
-<h1>PasswordResets#edit</h1>
-<p>Find me in app/views/password_resets/edit.html.erb</p>
+<% provide(:title, "Reset password") %>
+<h1>Forgot password</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-10 col-offset-1 text-left">
+      <%= form_with model: @user, url: password_resets_path(params[:id]), local: true do |f| %>
+        <%= render 'shared/error_messages' %>
+
+        <%= hidden_field_tag :email, @user.email %>
+
+        <div class="form-group">
+          <%= f.label :password, class: 'control-label' %>
+          <%= f.password_field :password, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password_confirmation, class: 'control-label' %>
+          <%= f.password_field :password_confirmation, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.submit "Submit", class: "btn btn-primary" %>
+        </div>
+      <% end %>  
+    </div>
+  </div>
+</div>
