add project closed fucntion

--- a/src/app/views/projects/_project.html.erb
+++ b/src/app/views/projects/_project.html.erb
@@ -8,6 +8,6 @@
   </td>
   <td>
     <% link_to 'Edit', "#" %>
-    | <% link_to 'Close', "#" %>
+    | <%= link_to 'Close', project, class: "btn btn-primary" ,method: :delete, data: { confirm: "You sure?" } %>
   </td>
 </tr>
