--- a/src/app/views/users/show.html.erb
+++ b/src/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
   <%= gravatar_for @user %>
   <%= @user.name %>
 </h1>
+# I want to delete this partial
 <div class="container">
   <div class="row">
     <% if @user.projects.any? %>
