--- a/src/app/views/password_resets/edit.html.erb
+++ b/src/app/views/password_resets/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-10 col-offset-1 text-left">
       <%= form_with model: @user, url: password_reset_path(params[:id]), local: true do |f| %>
-        <%= render 'shared/error_messages' %>
+        <%= render 'shared/error_messages', object: f.object %>
 
         <%= hidden_field_tag :email, @user.email %>
 
