--- a/src/app/views/static_pages/_logged_in.html.erb
+++ b/src/app/views/static_pages/_logged_in.html.erb
@@ -1,6 +1,11 @@
 <% provide(:title, 'Projects') %>
 <% if projects.any? %>
   <h1>All Projects</h1>
+  <div class="container">
+    <div class="row">
+      <%= link_to "New Project", new_project_path, class: "btn btn-primary" %>
+    </div>
+  </div>
   <table class="table table-hover">
     <thead>
       <tr>
