--- a/src/app/views/members/index.html.erb
+++ b/src/app/views/members/index.html.erb
@@ -4,7 +4,7 @@
 <% if owner?(@project) %>
   <div class="container">
     <div class="row">
-      <%= link_to "Add Member", '#', class: "btn btn-primary" %>
+      <%= link_to "Add Member", new_project_member_path(@project), class: "btn btn-primary" %>
     </div>
     <div class="row">
       <%= link_to "Remove selected members", '#', class: "btn btn-danger" %>
