[Progressing] create request spec about destroy action in members controller

--- a/src/app/views/members/_member.html.erb
+++ b/src/app/views/members/_member.html.erb
@@ -3,7 +3,7 @@
   <td>
     <%= link_to member.user.name, '#' %>
   </td>
-  <% if owner?(project) %>
+  <% if owner?(project) && !(member.owner) %>
     <td>
       <%= link_to 'Remove', '#', class: "btn btn-dark" ,id: "remove_#{member.id}", method: :delete, data: { confirm: "You sure?" } %>
     </td>
