--- a/src/app/views/tags/_edit_form.html.erb
+++ b/src/app/views/tags/_edit_form.html.erb
@@ -1,7 +1,6 @@
-<%= form_with model: @tag, url: project_tags_path(@project), local: true do |f| %>
-
+<%= form_with model: @tag, url: project_tag_path(@tag), method: :patch, local: true do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
-  
+
   <div class="form-group">
     <%= f.label :name, class: 'control-label' %>
     <%= f.text_field :name, class: 'form-control' %>
