--- a/src/app/views/tags/new.html.erb
+++ b/src/app/views/tags/new.html.erb
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="row">
     <div class="col-10 col-offset-1 text-left">
-      <%= render 'form' %>
+      <%= render 'create_form' %>      
     </div>
   </div>
 </div>
