[Finish] to create system spec and destroy action and view about tags

--- a/src/app/views/projects/_menu.html.erb
+++ b/src/app/views/projects/_menu.html.erb
@@ -4,10 +4,10 @@
       <%= link_to 'Task', '#' %>
     </li>
     <li class="list-group-item">
-      <%= link_to 'Label', '#' %>
+      <%= link_to 'Tag', project_tags_path(@project) %>
     </li>
     <li class="list-group-item">
-      <%= link_to 'Member', '#' %>
+      <%= link_to 'Member', project_members_path(@project) %>
     </li>
     <li class="list-group-item">
       <%= link_to 'Graph', '#' %>
