--- a/src/app/views/tags/index.html.erb
+++ b/src/app/views/tags/index.html.erb
@@ -2,7 +2,7 @@
 <h1>Tags</h1>
 <div class="container">
   <div class="row">
-    <%= link_to "Add Tag", '#', class: "btn btn-primary" %>
+    <%= link_to "Add Tag", new_project_tag_path(@project), class: "btn btn-primary" %>
   </div>
 </div>
 <div class="container">
