--- a/src/app/views/tags/_tag.html.erb
+++ b/src/app/views/tags/_tag.html.erb
@@ -15,7 +15,11 @@
     %>
     <% if owner?(project) %>
       |<%= link_to 'Remove',
-        '#',
+        project_tag_path(tag,
+          params: {
+            project_id: project.id
+          }
+        ),
         class: "btn btn-dark",
         id: "remove_#{tag.id}",
         method: :delete, 
