--- a/src/app/views/tasks/_task.html.erb
+++ b/src/app/views/tasks/_task.html.erb
@@ -18,15 +18,15 @@
   <td>
     <%= link_to 'Detail',
       '#',
-      class: "btn btn-info" ,
-      id: "show_#{task.id}", 
+      class: "btn btn-info",
+      id: "show_#{task.id}"
     %>
   </td>
   <td>
     <%= link_to 'X',
       '#',
-      class: "btn btn-danger" ,
-      id: "remove_#{task.id}", 
+      class: "btn btn-danger",
+      id: "remove_#{task.id}"
     %>
   </td>
 </tr>
