--- a/src/app/views/tasks/_form.html.erb
+++ b/src/app/views/tasks/_form.html.erb
@@ -14,7 +14,7 @@
 
   <div class="form-group">
     <%= f.label :pic, class: 'control-label' %>
-    <%= options_for_select(user_info_from(@members)) %>
+    <%= f.select(:pic, options_for_select(user_info_from(@members))) %>
   </div>
 
   <div class="form-group">
