--- a/src/app/views/tasks/_form.html.erb
+++ b/src/app/views/tasks/_form.html.erb
@@ -33,7 +33,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.fields_for :tags do |tag_fields| %>
+    <%= f.fields_for :taggings do |tag_fields| %>
       <%= tag_fields.collection_check_boxes(:tag_id, @tags, :id, :name, include_hidden: false) %>
     <% end %>
   </div>
