--- a/src/app/views/tasks/_task.html.erb
+++ b/src/app/views/tasks/_task.html.erb
@@ -19,7 +19,7 @@
   </td>
   <td>
     <%= link_to 'Detail',
-      '#',
+      project_task_path(task),
       class: "btn btn-info",
       id: "show_#{task.id}"
     %>
