--- a/src/app/views/tasks/_form.html.erb
+++ b/src/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @task_form, url: project_tasks_path(@project), local: true do |f| %>
+<%= form_with model: @task_form, url: yield(:form_url), method: yield(:method), local: true do |f| %>
 
   <%= render 'shared/error_messages', object: f.object %>
   
