[Progressing] create request spec about update action

--- a/src/app/views/tasks/show.html.erb
+++ b/src/app/views/tasks/show.html.erb
@@ -30,6 +30,11 @@
   </div>
   <div class="row">
     <div class="">
+      <%= pic_user(@task).name %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="">
       <%= @task.content %>
     </div>
   </div>
