--- a/src/app/views/tasks/show.html.erb
+++ b/src/app/views/tasks/show.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="row">
     <div class="">
-      <%= @task.deadline %>
+      <%= @task.deadline.strftime("%Y-%m-%d") %>
     </div>
   </div>
   <div class="row">
